--- a/AppFutbolArg/templates/AppFutbolArg/Fixture.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Fixture.html
@@ -2,6 +2,7 @@
 {% load static %}
 <title>{% block title %}Posiciones | Liga Argentina 2023{% endblock %}</title>
 {% block contenidoQueCambia %}
+<div class="contenido">
 <div class="container mt-5 margenPosiciones">
 <h2 style="color: darkblack; font-weight: bold">FECHA 22:</h2>
 <table>
@@ -18,5 +19,6 @@
     </tr>
     {% endfor %}
 </table>
+</div>
 </div>
 {% endblock %}
