--- a/AppFutbolArg/templates/AppFutbolArg/Equipos.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Equipos.html
@@ -2,7 +2,8 @@
 {% load static %}
 <title>{% block title %} Equipos | Liga Argentina 2023{% endblock %}</title>
 {% block contenidoQueCambia %}
-<div s class="container mt-5 margenPosiciones">
+<div class="contenido">
+<div class="container mt-5 margenPosiciones">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <form action="{% url 'ver_equipo' %}" method="GET" class="mb-5">
@@ -26,5 +27,6 @@
         </div>
     </div>
     <img class="masthead-avatar mb-5" src="{% static 'AppFutbolArg/assets/img/equipos_.jpg' %}" alt="">
-{% endblock %}
 </div>
+</div>
+{% endblock %}
