--- a/AppFutbolArg/templates/AppFutbolArg/getEquipos.html
+++ b/AppFutbolArg/templates/AppFutbolArg/getEquipos.html
@@ -2,6 +2,7 @@
 {% load static %}
 <title>{% block title %}Equipos Argentinos | Liga Argentina 2023{% endblock %}</title>
 {% block contenidoQueCambia %}
+<div class="contenido">
 {% if equipo %}
     <div class="container mt-5 margenPosiciones">
         <h2 style="color: darkblack; font-weight: bold">Resultado de la búsqueda:</h2>
@@ -31,4 +32,5 @@
         <a class="btn btn-primary" href="{% url 'Equipos' %}">Regresar</a>
     </div>
 {% endif %}
+</div>
 {% endblock %}
