Actualizando templates P, F, getE

--- a/AppFutbolArg/templates/AppFutbolArg/Fixture.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Fixture.html
@@ -1,24 +1,30 @@
 {% extends "AppFutbolArg/Inicio.html" %}
 {% load static %}
-<title>{% block title %}Posiciones | Liga Argentina 2023{% endblock %}</title>
+<title>{% block title %}Fixture | Liga Argentina 2023{% endblock %}</title>
 {% block contenidoQueCambia %}
 <div class="contenido">
-<div class="container mt-5 margenPosiciones">
-<h2 style="color: darkblack; font-weight: bold">FECHA 22:</h2>
-<table>
-    <tr>
-        <th>Día</th>
-        <th>Hora</th>
-        <th>Partido</th>
-    </tr>
-    {% for fixture in partidos %}
-    <tr>
-        <td>{{ fixture.dia|date:'d/m' }}</td>
-        <td>{{ fixture.hora }}</td>
-        <td>{{ fixture.local.nombre }} vs {{ fixture.visitante.nombre }}</td>
-    </tr>
-    {% endfor %}
-</table>
-</div>
+    <div class="container mt-5 margenPosiciones">
+        <h2 style="color: darkblack; font-weight: bold">FECHA 22:</h2>
+        <table>
+            <tr>
+                <th>Día</th>
+                <th>Hora</th>
+                <th>Local</th>
+                <th>RL</th>
+                <th>RV</th>
+                <th>Visitante</th>
+            </tr>
+            {% for fixture in partidos %}
+            <tr>
+                <td>{{ fixture.dia|date:'d/m' }}</td>
+                <td>{{ fixture.hora }}</td>
+                <td>{{ fixture.local.nombre }}</td>
+                <td>{{ fixture.resultadoLocal|default:"-" }}</td>
+                <td>{{ fixture.resultadoVisitante|default:"-" }}</td>
+                <td>{{ fixture.visitante.nombre }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
 </div>
 {% endblock %}
