Actualizando templates y agregando equipos

--- a/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
+++ b/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
@@ -2,7 +2,14 @@
 .contenido{
     background-color: #DAF7A6;
     position: absolute !important;
-    height: 200% !important;
+    height: 100% !important;
+    width: 100% !important;
+}
+
+.equipofondo {
+    background-color: #DAF7A6;
+    position: absolute !important;
+    height: auto !important;
     width: 100% !important;
 }
 
