--- a/AppFutbolArg/templates/AppFutbolArg/Equipos.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Equipos.html
@@ -2,7 +2,7 @@
 {% load static %}
 <title>{% block title %} Equipos | Liga Argentina 2023{% endblock %}</title>
 {% block contenidoQueCambia %}
-<div class="contenido">
+<div class="equipofondo">
 <div class="container mt-5 margenPosiciones">
     <div class="row justify-content-center">
         <div class="col-md-6">
