--- a/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
+++ b/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
@@ -1,13 +1,13 @@
 
 .contenido{
-    background-color: #DAF7A6;
+    background-image: url("../assets/img/futbol-background.jpg");
     position: absolute !important;
     height: 100% !important;
     width: 100% !important;
 }
 
 .equipofondo {
-    background-color: #DAF7A6;
+    background-image: url("../assets/img/futbol-background.jpg");
     position: absolute !important;
     height: auto !important;
     width: 100% !important;
@@ -51,4 +51,32 @@ table td {
     margin-top: 100px !important;
     width: 100%;
     height: 200%;
+}
+
+.paralogin {
+    background-image: url("../assets/img/futbol-background.jpg");
+    position: absolute !important;
+    height: 100% !important;
+    width: 100% !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.formLogin {
+    font-weight: bold;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 7%, rgba(53,0,159,1) 48%);
+    padding: 40px 20px 20px 20px;
+    border-radius: 5px;
+    width: 350px;
+    height: 400px;
+}
+
+.formLogin div {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
