--- a/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
+++ b/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
@@ -80,3 +80,43 @@ table td {
     justify-content: center;
     align-items: center;
 }
+
+.inputLogin{
+    border-radius: 5px;
+    border: 1px solid rebeccapurple;
+    width: 90%;
+}
+
+.pararegistro {
+    background-image: url("../assets/img/futbol-background.jpg");
+    position: absolute !important;
+    height: 100% !important;
+    width: 100% !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.formRegistro {
+    font-weight: bold;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 7%, rgba(53,0,159,1) 48%);
+    padding: 40px 20px 20px 20px;
+    border-radius: 5px;
+    width: 350px;
+    height: 400px;
+}
+
+.formRegistro div {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.inputLogin{
+    border-radius: 5px;
+    border: 1px solid rebeccapurple;
+    width: auto;
+}
