registro, login y templates

--- a/AppFutbolArg/templates/AppFutbolArg/Equipos.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Equipos.html
@@ -22,7 +22,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <p>Utiliza la imagen como guía para ingresar correctamente el nombre</p>
+                <p style="color: black; background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,0.8688725490196079) 0%);">Utiliza la imagen como guía para ingresar correctamente el nombre</p>
             </form>
         </div>
     </div>
