--- a/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
+++ b/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
@@ -100,12 +100,12 @@ table td {
 
 .formRegistro {
     font-weight: bold;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 7%, rgba(53,0,159,1) 48%);
+    background: rgb(48,136,255);
+    background: linear-gradient(90deg, rgba(48,136,255,1) 30%, rgba(255,255,255,1) 50%, rgba(54,139,255,1) 70%);
     padding: 40px 20px 20px 20px;
     border-radius: 5px;
-    width: 350px;
-    height: 400px;
+    width: 400px;
+    height: 550px;
 }
 
 .formRegistro div {
