--- a/AppFutbolArg/templates/AppFutbolArg/login.html
+++ b/AppFutbolArg/templates/AppFutbolArg/login.html
@@ -1,20 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {% load static %}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="{% static 'AppFutbolArg/css/fabifriasStyles.css' %}" rel="stylesheet">
-    <link href="{% static 'AppFutbolArg/css/styles.css' %}" rel="stylesheet">
-    <link href="{% static 'AppFutbolArg/css/heading.css' %}" rel="stylesheet">
-    <link href="{% static 'AppFutbolArg/css/bootstrap.min.css' %}" rel="stylesheet">
-    <script src="{% static 'AppFutbolArg/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'AppFutbolArg/js/scripts.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
-    <title>{% block title %} Log In | Liga Argentina 2023{% endblock %}</title>
-</head>
+{% extends "AppFutbolArg/Inicio.html" %}
+{% load static %}
+<title>{% block title %} Log In | Liga Argentina 2023{% endblock %}</title>
+{% block contenidoQueCambia %}
 <body>
     <div class="paralogin">
         <form action="" method="POST" class="formLogin"> {% csrf_token %}
@@ -31,8 +18,8 @@
             {% if error %}
                 <p style="color: red;">{{error}}</p>
             {% endif %}
-            <p style="color: white;">¿Aún no tienes una cuenta? <a href="/AppFutbolArg/registro">Registrate</a></p>
+            <p style="color: white;">¿Aún no tienes una cuenta? <a href="/AppFutbolArg/registro" class="btn btn-success">Registrate</a></p>
         </form>
     </div>
 </body>
-</html>
+{% endblock %}
