--- a/AppFutbolArg/templates/AppFutbolArg/registro.html
+++ b/AppFutbolArg/templates/AppFutbolArg/registro.html
@@ -1,25 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {% load static %}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="{% static 'AppFutbolArg/css/fabifriasStyles.css' %}" rel="stylesheet">
-    <link href="{% static 'AppFutbolArg/css/styles.css' %}" rel="stylesheet">
-    <link href="{% static 'AppFutbolArg/css/heading.css' %}" rel="stylesheet">
-    <link href="{% static 'AppFutbolArg/css/bootstrap.min.css' %}" rel="stylesheet">
-    <script src="{% static 'AppFutbolArg/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'AppFutbolArg/js/scripts.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
-    <title>{% block title %} Registro | Liga Argentina 2023{% endblock %}</title>
-</head>
+{% extends "AppFutbolArg/Inicio.html" %}
+{% load static %}
+<title>{% block title %} Registro | Liga Argentina 2023{% endblock %}</title>
+{% block contenidoQueCambia %}
 <body>
     <div class="pararegistro">
         <form action="" method="POST" class="formRegistro">
             {% csrf_token %}
-            <h3 style="color: white; font-weight:bold; margin-bottom: 30px; display: flex; justify-content: center; align-items: center;">REGISTRO</h3>
+            <h3 style="color: darkblack; font-weight:bold; margin-bottom: 30px; display: flex; justify-content: center; align-items: center;">REGISTRO</h3>
             <div>
                 <input id="id_username" name="username" type="text" placeholder="User" class="inputLogin">
             </div>
@@ -41,8 +28,10 @@
             <div>
                 <button class="btn btn-primary" type="submit">Registrarse</button>
             </div>
-            <p style="color: white;">¿Ya tienes una cuenta? <a href="/AppCoder/login">Iniciar sesión</a></p>
+            <div>
+                <p style="color: darkblack; display: flex; justify-content: center; align-items: center;">¿Ya tienes una cuenta?<a href="/AppFutbolArg/login" class="btn btn-success">Iniciar sesión</a></p>
+            </div>
         </form>
     </div>
 </body>
-</html>
+{% endblock %}
