--- a/AppFutbolArg/templates/AppFutbolArg/Fixture.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Fixture.html
@@ -4,9 +4,7 @@
 {% block contenidoQueCambia %}
 <div class="contenido">
     <div class="container mt-5 margenPosiciones">
-        <div style="display: flex; justify-content: center; background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,0.8688725490196079) 0%); padding: 5px;">
-            <h2 style="color: black; font-weight: bold; ">FECHA 23:</h2>
-        </div>
+        <h2 class="subrayado" style="color: black; font-weight: bold; ">FECHA 23:</h2>
         <table>
             <tr>
                 <th>Día</th>
