--- a/AppFutbolArg/templates/AppFutbolArg/Perfil/perfil.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Perfil/perfil.html
@@ -7,8 +7,8 @@
     <div class="formRegistro">
         <ul>
             <li><p>Username: {{ user.username }}</p></li>
-            <li><p>Firstname: {{ user.first_name }}</p></li>
-            <li><p>Lastrname: {{ user.last_name }}</p></li>
+            <li><p>Nombre/s: {{ user.first_name }}</p></li>
+            <li><p>Apellido/s: {{ user.last_name }}</p></li>
             <li><p>Nacionalidad: {{ user.nacionalidad }}</p></li>
             <li><p>Hincha de: {{ user.hincha }}</p></li>
         </ul>
@@ -17,4 +17,3 @@
     </div>
 </div>
 {% endblock %}
-
