--- a/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
+++ b/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
@@ -14,6 +14,14 @@
 }
 
 
+.subrayado {
+    display: flex;
+    justify-content: center;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,0.8688725490196079) 0%);
+    padding: 5px;
+}
+
+
 .container.margenPosiciones {
     margin-top: 100px !important;
 }
