--- a/AppFutbolArg/templates/AppFutbolArg/Perfil/editarPerfil.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Perfil/editarPerfil.html
@@ -10,9 +10,9 @@
             <table id="posiciones" class="tablesorter1">
                 {{ form.as_table }}
             </table>
-            <input type="submit" value="Editar perfil">
+            <input class="btn btn-primary mb-3" type="submit" value="Confirmar edición">
         </form>
-        <a href="/AppFutbolArg/Perfil/changePassword">Cambiar contraseña</a>
+            <a href="/AppFutbolArg/Perfil/changePassword" class="btn btn-success">Cambiar contraseña</a>
     </div>
 </div>
 {% endblock %}
