--- a/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
+++ b/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
@@ -128,3 +128,10 @@ table td {
     border: 1px solid rebeccapurple;
     width: auto;
 }
+
+.contenidoBlogs {
+    background-image: url("../assets/img/canchavertical.jpg");
+    position: absolute !important;
+    height: 100% !important;
+    width: 100% !important;
+}
