--- a/AppFutbolArg/templates/AppFutbolArg/Blogs/blogs.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Blogs/blogs.html
@@ -5,19 +5,19 @@
 {% block contenidoQueCambia %}
 <div class="contenidoBlogs">
     <div class="container mt-5 margenPosiciones">
-        <h1 style="display: flex; justify-content: center; color: #1D086C; font-weight: bold;">Blogs de Futbol</h1>
-        <p style="color: white;">Animate a públicar tu blogs de Futbol: <a href="/AppFutbolArg/blogs/bloguear" class="btn btn-success">BLOGUEA</a></p>
-        {% for blog in blogs %}
+        <h1 style="display: flex; justify-content: center; color: #1D086C; font-weight: bold;">Historias del Fútbol Argentino</h1>
+        <p style="color: white;">Animate a publicar tu blog de Fútbol: <a href="/AppFutbolArg/blogs/bloguear" class="btn btn-success">BLOGUEA</a></p>
         <div class="prevBlogs">
-            <h2 style="font-weight: bold;">{{ blog.titulo }}</h2>
-            <h3>{{ blog.subtitulo }}</h3>
-            <p>Autor: {{ blog.autor }}</p>
-            <p>Fecha: {{ blog.fecha }}</p>
-            <img class="blog-image" src="{{ blog.imagen.url }}" alt="{{ blog.titulo }}">
-            <p>{{ blog.cuerpo|truncatechars:150 }}</p>
-            <a href="{{ blog.get_absolute_url }}">Leer más</a>
+            {% for blog in blogs %}
+                <h2 style="font-weight: bold;">{{ blog.titulo }}</h2>
+                <h3>{{ blog.subtitulo }}</h3>
+                <p>Autor: {{ blog.autor }}</p>
+                <p>Fecha: {{ blog.fecha }}</p>
+                <img class="blog-image" src="{{ blog.imagen.url }}" alt="{{ blog.titulo }}">
+                <p>{{ blog.cuerpo|truncatechars:150 }}</p>
+                <a href="{% url 'detalle_blog' blog_id=blog.id %}">Leer más</a>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
 </div>
 {% endblock %}
