--- a/AppFutbolArg/templates/AppFutbolArg/Perfil/avatar.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Perfil/avatar.html
@@ -1,13 +1,19 @@
-% extends "../inicio.html" %}
+{% extends "../inicio.html" %}
 {% load static %}
-{% block contenidoQueCambia %}
-    <h3>Avatar</h3>
-    <h5>{{user.username}}</h5>
 
-    <form method="POST" enctype="multipart/form-data"> {% csrf_token %}
-        <table>
-            {{ form.as_p }}
-        </table>
-        <input type="submit" value="Aceptar">
-    </form>
+<title>{% block title %}Avatar{% endblock %}</title>
+
+{% block contenidoQueCambia %}
+<div class="pararegistro">
+    <div class="container mt-5 margenPosiciones" style="display: flex; justify-content: center; align-items: center;">
+        <form method="POST" enctype="multipart/form-data" class="formRegistro"> {% csrf_token %}
+            <h3 style="color: black; font-weight: bold; display: flex; justify-content: center; align-items: center;">Avatar</h3>
+            <h5>{{user.username}}</h5>
+            <table>
+                {{ form.as_p }}
+            </table>
+            <input type="submit" value="Aceptar">
+        </form>
+    </div>
+</div>
 {% endblock %}
