--- a/AppFutbolArg/templates/AppFutbolArg/Blogs/blogs.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Blogs/blogs.html
@@ -7,22 +7,26 @@
     <div class="container mt-5 margenPosiciones">
         <h1 style="display: flex; justify-content: center; color: #1D086C; font-weight: bold;">Historias del Fútbol Argentino</h1>
         <p style="color: white;">Animate a publicar tu blog de Fútbol: <a href="/AppFutbolArg/blogs/bloguear" class="btn btn-success">BLOGUEA</a></p>
-        <div class="prevBlogs">
-            {% for blog in blogs %}
-                <h2 style="font-weight: bold;">{{ blog.titulo }}</h2>
-                <h3>{{ blog.subtitulo }}</h3>
-                <p>Autor: {{ blog.autor }}</p>
-                <p>Fecha: {{ blog.fecha }}</p>
-                <img class="blog-image" src="{{ blog.imagen.url }}" alt="{{ blog.titulo }}">
-                <p>{{ blog.cuerpo|truncatechars:150 }}</p>
-                <a href="{% url 'detalle_blog' blog_id=blog.id %}">Leer más</a>
+            <div class="prevBlogs">
+                <div class="blog-container">
+                    {% for blog in blogs %}
+                        <div class="blog-item">
+                            <h2 style="font-weight: bold;">{{ blog.titulo }}</h2>
+                            <h3>{{ blog.subtitulo }}</h3>
+                            <p>Autor: {{ blog.autor }}</p>
+                            <p>Fecha: {{ blog.fecha }}</p>
+                            <img class="blog-image" src="{{ blog.imagen.url }}" alt="{{ blog.titulo }}">
+                            <p>{{ blog.cuerpo|truncatechars:150 }}</p>
+                            <a href="{% url 'detalle_blog' blog_id=blog.id %}">Leer más</a>
 
-                {% if user.is_superuser or blog.autor == user %}
-                    <a href="{% url 'editar_blog' blog_id=blog.id %}">Editar</a>
-                    <a href="{% url 'eliminar_blog' blog_id=blog.id %}">Eliminar</a>
-                {% endif %}
-            {% endfor %}
-        </div>
+                            {% if user.is_superuser or blog.autor == user %}
+                                <a href="{% url 'editar_blog' blog_id=blog.id %}">Editar</a>
+                                <a href="{% url 'eliminar_blog' blog_id=blog.id %}">Eliminar</a>
+                            {% endif %}
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
     </div>
 </div>
 {% endblock %}
