--- a/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
+++ b/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
@@ -131,6 +131,7 @@ table td {
 
 .contenidoBlogs {
     background-image: url("../assets/img/canchavertical.jpg");
+    background-size: cover;
     position: absolute !important;
     height: auto !important;
     width: 100% !important;
@@ -172,9 +173,62 @@ table td {
     position: absolute !important;
     height: auto !important;
     width: 100% !important;
+    display: flex;
     min-height: 100vh;
 }
 
 .blogsLeer {
     background-color: #B1D643
+}
+
+.blogsLeer h2, h3, p {
+    padding: 10px;
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.blogsLeer h6{
+    padding: 10px 5px 5px 5px;
+}
+
+.botonesEditarEliminar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding: 10px 5px 5px 5px;
+}
+
+.btn-editar {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: blue;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    text-decoration: none;
+    transition: background-color 0.3s;
+    margin-right: 10px;
+}
+
+.btn-editar:hover {
+    background-color: darkblue;
+}
+
+
+.btn-eliminar {
+    display: inline-block;
+    padding: 10px 20px 10px 10px;
+    background-color: red;
+    color: white;
+    border: 2px;
+    border-radius: 5px;
+    font-size: 16px;
+    text-decoration: none;
+    transition: background-color 0.3s;
+}
+
+.btn-eliminar:hover {
+    background-color: darkred;
 }
